# budget_guardian

./: .env.example  .gitignore  README.md  app.db  pyproject.toml  user.json
canfly/: README.md
canfly/skill/: SKILL.md
canfly/templates/: memory_injection_placeholder.md
data/: canfly_placeholder_state.json  vendors.json
docs/: ARCHITECTURE.md  CANFLY.md  README.md  SERVICES.md
scripts/: canfly_demo.py  test_authorize_all.py
src/: admin.py  data_loader.py  db.py  decision.py  init_db.py  main.py  notification.py  runtime.py  trust_score.py
src/core/: __init__.py  admin.py  approve.py  main.py  runtime.py
src/core/infra/: __init__.py  data_loader.py  db.py  init_db.py  notifications.py  paths.py  settings.py
src/core/integrations/: __init__.py
src/core/integrations/bgaas/: __init__.py  authorize.py  authorize_cli.py  eip712.py  http_stub.py  types.py
src/core/integrations/canfly/: __init__.py  config.py  entitlement.py  interception.py  models.py  onboarding.py  pipeline.py  state_store.py
src/core/integrations/smart_account/: __init__.py
src/core/trust/: __init__.py  decision.py  trust_score.py
transactions/: transaction1.json  transaction2.json  transaction3.json  transaction4.json  transaction5.json  transaction6.json
