[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "budget-guardian"
version = "0.1.0"
description = "Buyer-agent budget governance (Canfly + BGaaS placeholders)"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
