[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "budget-guardian"
version = "0.1.0"
description = "Buyer-agent budget governance (Canfly + BGaaS)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "eth-account>=0.13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
